--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ivan1pl</groupId>
     <artifactId>Animations</artifactId>
-    <version>1.1</version>
+    <version>1.1.1</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -88,4 +88,5 @@
             </exclusions>
         </dependency>
     </dependencies>
+    <name>Animations1.12</name>
 </project>
